@@ -29,6 +29,9 @@ Bugs fixed
 * Default encoding for plain text serialisation was different from
   that of XML serialisation (UTF-8 instead of ASCII).
 
+* ``lxml.html.diff`` didn't treat empty tags properly (e.g.,
+  ``<br>``).
+
 Other changes
 -------------
 
